# external-memory-find-substr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: HPMOR.txt
src/: config.cpp  config.hpp  console_client.cpp  console_client.hpp  exception.hpp  file_context.cpp  file_context.hpp  file_parser.cpp  file_parser.hpp  main.cpp  string_utils.cpp  string_utils.hpp
